--- a/poli-sty.css
+++ b/poli-sty.css
@@ -6,6 +6,7 @@ https://color.adobe.com/TD-Colors---Option-3-color-theme-10394433/edit/?copy=tru
 
 body {
     font-size: 16px;
+    background-color: white;
 }
 
 .container {
@@ -40,58 +41,4 @@ div {
   grid-area: right;
   background-color: #e62d33;
   color: white;
-}
-
-.header {
-    grid-area: header;
-    background-color: #FF5035;
-    height: 80px;
-}
-
-.sidebar {
-    grid-area: sidebar;
-    background-color: #BDD4DE;
-    color: #333;
-}
-
-.main {
-    grid-area: main;
-    background-color: #EFEFEF;
-    color: #333;
-}
-
-.footer {
-    grid-area: footer;
-    background-color: #2B3A42;
-    height: 80px;
-}
-
-/* Flex */
-
-
-.portfolio {
-    display: flex;
-    justify-content: flex-start;
-    flex-flow: column wrap;
-    align-items: flex-start;
-    width: 100%;
-    height: 800px;
-}
-
-.portfolio div {
-    margin: 10px;
-}
-
-.portfolio div img {
-    width: 200px;
-    height: auto;
-}
-
-/*
-See:
-https://codepen.io/michellebarker/pen/zvxpoG
-*/
-
-.scaleimage img {
-    width: 400px;
 }
